# ImageProcessing

./: .gitignore
ex01/: a.out  image_show.c
ex01_zig_rewrite/: build.zig  build.zig.zon
ex01_zig_rewrite/src/: main.zig
ex03/: CMakeLists.txt  ex03.cpp  imageProcessingInHaskell.cabal
ex03/app/: Main.hs  Matrix.hs
ex04/src/: fft_wrapper.rs  main.rs
src/ex02/: main.zig
src/my_lib/: my_lib.zig
src/my_lib/formats/: Netpbm.zig
