cabal-version:      3.0
name:               imageProcessingInHaskell
version:            0.1.0.0
license:            AGPL-3.0-only
license-file:       LICENSE
author:             viniciusdutra314
maintainer:         dutravinisousa2@usp.br
category:           Graphics
build-type:         Simple
extra-doc-files:    CHANGELOG.md
common warnings
    ghc-options: -Wall

executable imageProcessingInHaskell
    import:           warnings
    main-is:          Main.hs
    other-modules:
        Matrix,
        PGM
    other-extensions:
        LambdaCase
    build-depends:    base ^>=4.18.3.0,
                      vector,
                      bytestring
    hs-source-dirs:   app
    default-language: GHC2021
